update kubernetes and docker files

--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -1,4 +1,4 @@
-FROM gcr.io/tensorflow/tensorflow
+FROM gcr.io/tensorflow/tensorflow:latest-py3
 
 RUN apt update && apt install -y g++ python-gdal gdal-bin
 RUN pip install joblib scikit-image
