--- a/kubernetes/Dockerfile
+++ b/kubernetes/Dockerfile
@@ -1,6 +1,6 @@
 FROM gcr.io/tensorflow/tensorflow:latest-py3
 
-RUN apt update && apt install -y g++ python-gdal gdal-bin
+RUN apt update && apt install -y g++ python3-gdal gdal-bin
 RUN pip install joblib scikit-image
 
 WORKDIR "/content"
